# CCECE2025_ROS2

src/controller_msgs/: CMakeLists.txt  package.xml
src/controller_msgs/msg/: AttSP.msg  RateSP.msg  SlsForce.msg  SlsState.msg
src/double_sls_qsf/: CMakeLists.txt  package.xml
src/double_sls_qsf/include/double_sls_qsf/: LowPassFilter.hpp  common.h  control.h  nonlinear_attitude_control.h
src/double_sls_qsf/launch/: ctrnode.launch.py  init.launch.py  init2.launch.py  single_default_uav_v1.launch.py  single_default_uav_v2.launch.py
src/double_sls_qsf/src/: main_node.cpp  nonlinear_attitude_control.cpp
src/setup/env-hooks/: setup.dsv.in
src/setup/models/iris_sls/: iris_sls.sdf  model.config
src/setup/models/px4vision_ancl/: px4vision_ancl fullideal.sdf  px4vision_ancl nodrag.sdf  px4vision_ancl realprop.sdf  px4vision_ancl.sdf
src/setup/models/px4vision_sls/: model.config  px4vision_sls wcollision.sdf  px4vision_sls.sdf
src/setup/models/px4vision_sls_gazebo/: model.config  px4vision_sls_gazebo.sdf
src/setup/src/: hello.cpp
src/setup/worlds/: empty.world
