<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>double_sls_qsf</name>
  <version>0.0.0</version>
  <description>TODO: ROS2 version of CCECE 2025</description>
  <maintainer email="yo12@ualberta.ca">yql</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libeigen3-dev</build_depend>

  <exec_depend>libeigen3-dev</exec_depend>
  <exec_depend>ros2launch</exec_depend> <!--for ros2 launch-->

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>controller_msgs</depend>
  <depend>px4_ros_com</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
